--- a/index.html
+++ b/index.html
@@ -6,25 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/app.css">
     <link rel="stylesheet" href="./css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Feedas</title>
 </head>
 <body>
     <div class="wrapper">
         <header class="header">
-            <!-- <div class="logo"></div>
-            <nav>
-                <a href=""></a>
-            </nav> -->
+            <div class="logo">
+                <a href="#" class="fa fa-facebook"></a>
+                <i class="fa fa-search">
+                <input type="search" placeholder="Search">
+                </i>
+            </div>
+            <nav class="nav">
+                <a href="" class="fa fa-home"></a>
+                <a href="" class="fa fa-male"></a>
+                <a href="" class="fa fa-cloud"></a>
+                <a href="" class="fa fa-bars"></a>
+            </nav>
         </header>
         <main class="main">
         <aside class="left"></aside>
         <section class="section">
             <------------->>
                 </section>
-        <div class="right"></div>
+        <div class="right">
+        </div>
     </main>
     </div>
     <script src="./js/data.js"></script>
     <script src="./js/main.js"></script>
 </body>
 </html>
+
+
+
