--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
         </nav>
       </header>
       <main class="main">
-        <aside class="left"></aside>
+        <aside class="left">
+            <div class="draugai">
+                <h1>Draugai</h1>
+                <div class="sarasas"></div>
+            </div>
+        </aside>
         <section class="section"><------------->></section>
         <div class="right"></div>
       </main>
