--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/app.css" />
     <link rel="stylesheet" href="./css/font-awesome.min.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -32,10 +35,10 @@
       </header>
       <main class="main">
         <aside class="left">
-            <div class="draugai">
-                <h1>Draugai</h1>
-                <div class="sarasas"></div>
-            </div>
+          <div class="draugai">
+            <h1>Draugai</h1>
+            <div class="sarasas"></div>
+          </div>
         </aside>
         <section class="section"><------------->></section>
         <div class="right"></div>
