--- a/index.html
+++ b/index.html
@@ -41,7 +41,23 @@
           </div>
         </aside>
         <section class="section"><------------->></section>
-        <div class="right"></div>
+        <div class="right">
+          <h1>REKLAMA </h1>
+          <div class="img__wrap">
+            <img src="./img/gallery/1.jpg" alt="img">
+          </div>
+          <div class="arrows">
+          <div class="left__arrow" onclick="press(-1)">
+              <img src="./img/back.png" alt="left">
+          </div>
+          <div class="right__arrow" onclick="press(1)">
+              <img src="./img/next.png" alt="right">
+          </div>
+        </div>
+        
+      </div>
+      </div>
+  </div>
       </main>
     </div>
     <script src="./js/data.js"></script>
