--- a/index.html
+++ b/index.html
@@ -54,13 +54,15 @@
               <img src="./img/next.png" alt="right">
           </div>
         </div>
-        
+        <div class="btc"></div>
       </div>
       </div>
   </div>
       </main>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./js/data.js"></script>
     <script src="./js/main.js"></script>
+    <script src="./js/axios.js"></script>
   </body>
 </html>
