--- a/index.html
+++ b/index.html
@@ -54,7 +54,13 @@
               <img src="./img/next.png" alt="right">
           </div>
         </div>
-        <div class="btc"></div>
+        <div class="btc">
+          <div class="BTC"></div>
+          <div class="USD"></div>
+          <div class="PRICE"></div>
+          <div class="MARKETS"></div>
+          <div class="PRICES"></div>
+        </div>
       </div>
       </div>
   </div>
